@@ -754,7 +754,7 @@ if (isset($_GET['excel']) && $_GET['excel'] == 'user') {
    $data[$courseId] = array(_NAME => $value['name'],
          _CATEGORY => str_replace("&nbsp;&rarr;&nbsp;", " -> ", $directionsTreePaths[$value['directions_ID']]),
          _REGISTRATIONDATE => formatTimestamp($value['active_in_course']),
-         _COMPLETED => $value['to_timestamp'] ? formatTimestamp($value['to_timestamp']) : '-',
+         _COMPLETED => $value['completed'] ? _YES.($value['to_timestamp'] ? ', '._ON.' '.formatTimestamp($value['to_timestamp']) : '') : '-',
          _SCORE => formatScore($value['score']).'%',
          'active' => $value['active']);
    $courseLessons = $infoUser -> getUserStatusInCourseLessons(new EfrontCourse($value));
@@ -773,7 +773,7 @@ if (isset($_GET['excel']) && $_GET['excel'] == 'user') {
      $courseLesson = $courseLesson->lesson;
      $coursesTotalSec += $courseLesson['time_in_lesson']['total_seconds'];
      $subSectionData[$lessonId] = array(_NAME => $courseLesson['name'],
-                _COMPLETED => $courseLesson['timestamp_completed'] ? formatTimestamp($courseLesson['timestamp_completed']) : '-',
+                _COMPLETED => $courseLesson['completed'] ? _YES.($courseLesson['timestamp_completed'] ? ', '._ON.' '.formatTimestamp($courseLesson['timestamp_completed']): '') : '-',
                 _SCORE => formatScore($courseLesson['score']).'%',
                 _TIME => $courseLesson['time_in_lesson']['time_string']);
 /*
