@@ -2089,7 +2089,7 @@ define("_UNKNOWNSEPARATOR", "Άγνωστο διαχωριστικό");
 define("_LDAPUSER", "Αυτός ο χρήστη ταυτοποιείται μέσω του διακομιστή LDAP");
 define("_EXECUTE", "Εκτέλεση");
 define("_RECREATE", "Αναδημιουργία");
-define("_CLICKHERETOREINDEX", "Κάντε κλικ εδώ για να αναδημιουργήσετε το πίνακα αναζήτησης");
+define("_CLICKHERETOREINDEX", "Αναδημιουργία πίνακα αναζήτησης");
 define("_TRANSLATION", "Μετάφραση");
 define("_ENGLISHNAME", "Όνομα στα αγγλικά");
 define("_SUCCESSFULLYADDEDLANGUAGE", "Η γλώσσα δημιουργήθηκε επιτυχώς");
@@ -3788,13 +3788,13 @@ define("_PROPAGATECOURSE", "Διάδοση της δέσμης");
 define("_LESSONSTRUCTURE", "Δομή μαθήματος");
 define("_ADMINISTRATORCANNOTACCESSLESSONPAGE", "Ο διαχειριστής δεν μπορεί να προσπελάσει σελίδες μαθημάτων");
 define("_FAILEDPERMISSIONSMESSAGE", "%x directories και %y αρχεία δεν είναι εγγράψιμα από το web server.<br> Κάντε κλικ <a href = 'view_file.php?file=%z&action=download' target = '_NEW'>εδώ</a> για να κατεβάσετε πλήρη αναφορά");
-define("_CLICKHERETOSETPERMISSIONS", "Κάντε κλικ εδώ για να θέσετε τα δικαιώματα εγγραφής");
-define("_CLICKHERETOUNSETPERMISSIONS", "Κάντε κλικ εδώ για να αναιρέσετε τα δικαιώματα εγγραφής");
+define("_CLICKHERETOSETPERMISSIONS", "Θέστε τα δικαιώματα εγγραφής");
+define("_CLICKHERETOUNSETPERMISSIONS", "Αναιρέστε τα δικαιώματα εγγραφής");
 define("_SETPERMISSIONS", "Ανάθεση δικαιωμάτων");
 define("_UNSETPERMISSIONS", "Αναίρεση δικαιωμάτων");
 define("_SETPERMISSIONSINSTRUCTIONS", "Η λειτουργία αυτή θα αναθέσει δικαιώματα εγγραφής σε όλα τα αρχεία και τους φακέλους στο web server. Αυτό είναι υποχρεωτικό εάν επιθυμείτε να χρησιμοποιήσετε την αυτόματη ανανέωση, ενώ μπορεί να αποβεί χρήσιμο σε περιπτώσεις που αντιμετωπίζετε προβλήματα κατά τη διάρκεια ή μετά από μία αναβάθμιση. Από την άλλη, αφήνοντας δικαίωμα εγγραφής σε όλα τα αρχεία μπορεί υπό προϋποθέσεις να θέσει σε κίνδυνο την ασφάλεια του συστήματος.");
 define("_UNSETPERMISSIONSINSTRUCTIONS", "Η λειτουργία αυτή θα αφαιρέσει τα δικαιώματα εγγραφής σε όλα τα αρχεία και τους φακέλους από το web server. Αυτή η ρύθμιση είναι πιο ασφαλής αλλά δεν επιτρέπει την αυτόματη ενημέρωση του συστήματος.");
-define("_CLICKHERETOCHECKPERMISSIONS", "Κάντε κλικ εδώ για να ελέγξετε τα δικαιώματα εγγραφής");
+define("_CLICKHERETOCHECKPERMISSIONS", "Ελέγξετε τα δικαιώματα εγγραφής");
 define("_CHECKPERMISSIONS", "Έλεγχος δικαιωμάτων");
 define("_CHECKPERMISSIONSINSTRUCTIONS", "Η λειτουργία αυτή θα ελέγξει ποιοι φάκελοι και αρχεία στο σύστημα δεν είναι εγγράψιμα από το web server");
 define("_OPERATIONOUTCOME", "Αποτέλεσμα λειτουργίας");
@@ -4060,8 +4060,8 @@ define("_GROUPINFORMATION", "Πληροφορίες ομάδας");
 define("_CONTRAINACCESSTOCONTENT", "Περιόρισε την πρόσβαση στα αρχείο περιεχομένου σε συνδεδεμένους χρήστες");
 define("_COMPRESSTESTS", "Συμπίεση αποτελεσμάτων αξιολογήσεων στη βάση δεδομένων");
 define("_MAINTENANCETASKS", "Λειτουργίες συντήρησης");
-define("_CLICKHERETOCOMPRESSTESTS", "Κάντε κλικ εδώ για να συμπιέσετε τις ολοκληρωμένες αξιολογήσεις");
-define("_CLICKHERETOUNCOMPRESSTESTS", "Κάντε κλικ εδώ για να αποσυμπιέσετε τις ολοκληρωμένες αξιολογήσεις");
+define("_CLICKHERETOCOMPRESSTESTS", "Συμπιέστε τις ολοκληρωμένες αξιολογήσεις");
+define("_CLICKHERETOUNCOMPRESSTESTS", "Αποσυμπιέστε τις ολοκληρωμένες αξιολογήσεις");
 define("_COMPRESS", "Συμπίεση");
 define("_DATABASETASKS", "Λειτουργίες βάσης");
 define("_PLEASEBACKUPBEFORECOMPRESSING", "Παρακαλούμε πάρτε backup των δεδομένων σας προτού (απο)συμπιέσετε τις ολοκληρωμένες αξιολογήσεις");
@@ -4077,5 +4077,7 @@ define("_SORRYYOUDONOTHAVEACCESSTOTHISBRANCH", "Λυπούμαστε αλλά δ
 define("_SHOWCOMPLETEORGCHART", "Προβολή πλήρους ιεραρχίας εταιρείας στους χρήστες");
 define("_YOUCANNOTCOPYFROMTHESAMELESSON","Δεν μπορείτε να αντιγράψεται υλικό από το ίδιο μάθημα");
 define("_MESSAGESSTUDENTS","Μηνύματα από μαθητές");
-define("_CLICKHERETOREDELETEOLDTOKENS","Κάντε κλικ εδώ για να διαγράψετε τα api tokens που δημιουργήθηκαν περισσότερο από ένα μήνα πριν");
+define("_CLICKHERETOREDELETEOLDTOKENS","Διαγραφή api tokens παλαιότερων από ένα μήνα");
+define("_ADDNEWCONDITION", "Προσθήκη συνθήκης");
+define("_CLICKHERETOREDELETEADVANCEDREPORTVIEWS", "Διαγραφή views της γεννήτριας αναφορών χρηστών");
 ?>
